# test-freeswitch

./: .gitignore  INSTALL  Makefile.am  bootstrap.sh  configure.ac  freeswitch.spec  modules.conf
debian/: rules  util.sh
libs/Libevent/: Makefile.am  bootstrap.sh  buffer.c  bufferevent_sock.c  event.c  http.c  tmp
libs/Libevent/include/event2/: buffer.h  bufferevent.h  event.h  http.h
libs/Libevent/sample/: conf-alone.flac  http-client.c  https-client.c  le-proxy.c  vad.pcap
libs/apr/include/: apr_network_io.h
libs/apr/network_io/unix/: sockaddr.c  sockopt.c
libs/fuzeprotobuf/: Makefile.am  build_protos.sh  configure.ac
libs/fuzeprotobuf/include/: ProtoBufIf.h
libs/fuzeprotobuf/protos/: AudioQoS.proto
libs/fuzeprotobuf/src/: ProtoBufIf.cpp
libs/fuzetransport/: Makefile.am  configure.ac
libs/fuzetransport/include/: Buffer.h  Common.h  DnsClient.h  DnsResolver.h  Secure.h  Timer.h  Transport.h  Transport_c.h  Util.h
libs/fuzetransport/src/: Address.cpp  Address.h  ConnectionImpl.cpp  ConnectionImpl.h  CoreState.cpp  CoreState.h  DnsFileCache.mm  DnsFileCacheAndroid.cpp  DnsFileCacheWin.cpp  DnsResolver.cpp  DnsResolver.h  DtlsTransceiver.cpp  DtlsTransceiver.h  MediaBridge.cpp  MediaBridge.h  Prober.cpp  Prober.h  ProxyConnector.cpp  ProxyConnector.h  Resource.h  ResourceMgr.cpp  ResourceMgr.h  SecureRTP.cpp  SecureRTP.h  Server.cpp  Server.h  ServerCore.cpp  ServerCore.h  Stat.cpp  Stat.h  Stun.cpp  Stun.h  TcpCore.cpp  TcpCore.h  TcpListener.cpp  TcpListener.h  TcpTransceiver.cpp  TcpTransceiver.h  TcpTxrxState.cpp  TcpTxrxState.h  (+10 more)
libs/fuzetransport/src/core/: Compat.h  ConditionVariable.cpp  ConditionVariable.h  Exception.h  Log.cpp  Log.h  MutexLock.cpp  MutexLock.h  NotCopyable.h  ReadWriteLock.cpp  ReadWriteLock.h  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  TimerService.cpp  TimerService.h
libs/fuzetransport/src/msg/: Data.cpp  Data.h  HTTP.cpp  HTTP.h  Mapping.cpp  Mapping.h  Message.cpp  Message.h
libs/fuzetransport/src/polling/: Queue.h  TransportEvent.cpp  TransportEvent.h  TransportPoll.cpp
libs/iksemel/: openssl.m4
libs/libsndfile/src/: file_io.c
libs/sofia-sip/libsofia-sip-ua/sdp/: sdp.c  sdp_print.c
libs/sofia-sip/libsofia-sip-ua/sip/: sip_util.c
libs/sofia-sip/libsofia-sip-ua/tport/: ws.c
libs/sofia-sip/m4/: sac-openssl.m4
libs/srtp/: Makefile.am  configure  configure.ac
libs/srtp/crypto/test/: aes_calc  cipher_driver  datatypes_driver  env  kernel_driver  sha1_driver  stat_driver
libs/srtp/include/: srtp.h
libs/srtp/srtp/: srtp.c
libs/srtp/test/: dtls_srtp_driver  rdbx_driver  replay_driver  roc_driver  rtpw  srtp_driver  test_srtp
libs/stfu/: stfu.c  stfu.h
libs/webrtcneteq/: Makefile.am  Makefile_opus  Makefile_webrtc  bootstrap.sh  build_opus.sh  build_webrtc.sh  configure.ac
libs/webrtcneteq/src/: automode.c  buffer_stats.h  bufstats_decision.c  codec_db.h  cscope.out  dsp.c  dsp.h  dummy_empty.c  g722_interface.c  g722_interface.h  mcu.h  mcu_dsp_common.c  mcu_dsp_common.h  merge.c  opus_inst.h  opus_interface.c  opus_interface.h  packet_buffer.c  packet_buffer.h  recin.c  recout.c  rtp.c  signal_mcu.c  webrtc_neteq.c  webrtc_neteq_if.c  webrtc_neteq_if.cpp
libs/webrtcneteq/src/interface/: neteq_statistics.h  webrtc_neteq.h  webrtc_neteq_if.h  webrtc_neteq_internal.h
libs/webrtcneteq/src/interface/.svn/: all-wcprops  entries
libs/win32/sqlite/: sqlite.2012.vcxproj
libs/xmlrpc-c/: version.h
pkg/: dependencies  fs_post_install.sh  fs_pre_install.sh  fs_pre_remove.sh  publishucapideb.sh
src/: CMakeLists.txt  cJSON.c  cJSON_Utils.c  g711.c  switch.c  switch_apr.c  switch_channel.c  switch_core.c  switch_core_cert.c  switch_core_codec.c  switch_core_file.c  switch_core_hash.c  switch_core_io.c  switch_core_media.c  switch_core_rwlock.c  switch_core_session.c  switch_core_timer.c  switch_cpp.cpp  switch_event.c  switch_hashtable.c  switch_ivr.c  switch_ivr_bridge.c  switch_ivr_play_say.c  switch_json.c  switch_loadable_module.c  switch_log.c  switch_monitor.c  switch_pcm.c  switch_rtp.c  switch_stfu.c  switch_time.c  switch_utils.c
src/include/: dlist.h  fuze_jb.h  g711.h  switch.h  switch_apr.h  switch_cJSON.h  switch_cJSON_Utils.h  switch_channel.h  switch_core.h  switch_core_media.h  switch_cpp.h  switch_frame.h  switch_loadable_module.h  switch_log.h  switch_module_interfaces.h  switch_monitor.h  switch_resample.h  switch_rtp.h  switch_stfu.h  switch_types.h  switch_utils.h
src/include/private/: switch_core_pvt.h
src/mod/: .gitignore
src/mod/applications/mod_conference/: Makefile.am  conference_optimization.c  conference_optimization.h  conference_utils.c  conference_utils.h  mod_conference.c  mod_conference.h
src/mod/applications/mod_curl/: mod_curl.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/applications/mod_esf/: mod_esf.c
src/mod/applications/mod_fuze_ivr/: Makefile.am  b64.h  config.c  config.h  fuzenode.c  fuzenode.h  ivr.c  ivr.h  menu.c  menu.h  mod_fuze_ivr.c  utils.c  utils.h
src/mod/applications/mod_fuze_ivr/conf/autoload_configs/: fuze_ivr.conf.xml  modules.conf.xml
src/mod/applications/mod_fuze_ivr/conf/dialplan/public/: 01_FuzePSTN_GW.xml
src/mod/applications/mod_fuze_ivr/conf/lang/en/fuze/: fuze_ivr.xml
src/mod/applications/mod_oreka/: mod_oreka.c
src/mod/applications/mod_spandsp/: mod_spandsp_codecs.c
src/mod/codecs/mod_opus/: Makefile.am  mod_opus.c
src/mod/codecs/mod_sangoma_codec/: mod_sangoma_codec.c
src/mod/codecs/mod_voipcodecs/: mod_voipcodecs.c
src/mod/endpoints/mod_dingaling/: mod_dingaling.c
src/mod/endpoints/mod_sofia/: Makefile.am  mod_sofia.c  mod_sofia.h  rtp.c  sofia.c  sofia_glue.c  sofia_media.c
src/mod/event_handlers/mod_cdr_mongodb/: mod_cdr_mongodb.c
src/mod/event_handlers/mod_event_socket/: mod_event_socket.c
src/mod/languages/mod_lua/: mod_lua_wrap.cpp
src/mod/languages/mod_python/: Makefile.am  freeswitch.py  freeswitch_python.cpp  freeswitch_python.h  mod_python.c  mod_python_wrap.cpp
src/mod/timers/mod_posix_timer/test/: switch.h
